fix: add text align tag h2

--- a/wp-content/themes/mebli/assets/scss/_previously.scss
+++ b/wp-content/themes/mebli/assets/scss/_previously.scss
@@ -7,6 +7,11 @@
     text-align: center;
     margin-bottom: 4.7%;
   }
+  &.products-previously {
+    h2 {
+      text-align: right;
+    }
+  }
   &-inner {
     display: flex;
     justify-content: space-between;
